update ports for mysql

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_HOST=mongodb://localhost:27018
 DB_PASSWORD=mongoose
 DB_USER=root
-DB_HOST=localhost
+DB_HOST=localhost:3307
 DB_NAME=library
