--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,15 @@ services:
     volumes:
       - mongo_data:/data/db
       - ./.docker/mongo/init.js:/docker-entrypoint-initdb.d/init.js
+
+  app:
+    image: node:16
+    working_dir: /workspace
+    command: yarn start
+    ports:
+      - '8080:8080'
+    volumes:
+      - ./:/workspace
 volumes:
   mysql_data:
   mongo_data:
